src/objects/Not_Aunthenticated_Log__c.object
<CustomObject>
    <fields>
        <fullName>CallerPhoneNumber__c</fullName>
        <label>CallerPhoneNumber</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CardNumberMatch__c</fullName>
        <label>CardNumberMatch</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DOBMatch__c</fullName>
        <label>DOBMatch</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DOB__c</fullName>
        <label>DOB</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EnteredCardNumber__c</fullName>
        <label>EnteredCardNumber</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EnteredMemberNumber__c</fullName>
        <label>EnteredMemberNumber</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EnteredSSN__c</fullName>
        <label>EnteredSSN</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ICardNumber__c</fullName>
        <label>ICardNumber</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IdNumberMatch__c</fullName>
        <label>IdNumberMatch</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MMNMatch__c</fullName>
        <label>MMNMatch</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MMN__c</fullName>
        <label>MMN</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MemberNumberMatch__c</fullName>
        <label>MemberNumberMatch</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PINMatch__c</fullName>
        <label>PINMatch</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PhoneNumberMatch__c</fullName>
        <label>PhoneNumberMatch</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SSNnumberMatch__c</fullName>
        <label>SSNnumberMatch</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SalesforceID__c</fullName>
        <label>SalesforceID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <label>Not Aunthenticated Log</label>
    <listViews>
        <fullName>All</fullName>
        <columns>OBJECT_ID</columns>
        <columns>NAME</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Today</fullName>
        <columns>OBJECT_ID</columns>
        <columns>NAME</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>Today</label>
    </listViews>
    <nameField>
        <label>Not Aunthenticated Log Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Not Aunthenticated Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>